--- a/machine/corvette/TODO.mediawiki
+++ b/machine/corvette/TODO.mediawiki
@@ -35,8 +35,9 @@ Everytime a switch is hit flash the nearest light.
 
 == Skillshot Menu ==
 
-At game start choose between rollover, skidpad and dragrace
+At game start choose between rollover, skidpad, dragrace, and pink-slips.
 
 * rollover - use the rollover lanes, use flippers to change flashing lane, hit the flashing lane to get points
 * skidpad - use the upper left flipper to quickly hit the skidpad ramp to get more points
 * dragrace - quickly shoot the right ramp to start a dragrace that uses the racetrack, bash flippers to advance car, if you win you get a 2-ball multiball
+* pink-slips - only enabled once player has collected at least one car.  Shoot the right ramp within 10 seconds (maybe less) to lock the ball, animation for pink-slips starts, racetrack cars indicate who is in the lead, all shots advance blue car.  red car is computer car.  If the player's blue car wins the race, light one of the car lamps and release the locked ball.  If the player's blue car looses, disable the flippers and drain the ball and drain the captured ball and if they have a car lit it is un-lit.
